# mod-tbc-phase-announcer

./: CMakeLists.txt  INSTALL.md  README.md  mod-tbc-phase-announcer.cmake
conf/: mod-tbc-phase-announcer.conf.dist
data/sql/db-world/: mod-tbc-phase-announcer.sql
data/sql/world/: mod-tbc-phase-announcer.sql
src/: mod_tbc_phase_announcer.cpp  mod_tbc_phase_announcer.h
